<resources>
    <string name="app_name">Serendipity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>

    <string name="textField_name">Name</string>
    <string name="textField_nickname">Nick Name</string>
    <string name="textField_password">Password</string>
    <string name="textField_city">City</string>
    <string name="textField_ChangeCity">Change City</string>
    <string name="textField_ChangePassword">Change Password</string>
    <string name="textField_ChangeEmail">Change Email</string>
    <string name="textField_GPS">GPS</string>
    <!-- Strings related to button -->
    <string name="login_button">Login</string>
    <string name="record_button">Record</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_ds">ds</string>
    <string name="title_activity_save_record">SaveRecordActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="label_new_record">New record file</string>
    <string name="title_activity_profiles">ProfilesActivity</string>
</resources>
