<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context="com.sauvola.jussi.serendipity.RegisterActivity"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textField_name"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_user_grey"
                android:drawablePadding="10dip"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:editable="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textField_nickname"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_nickname_grey"
                android:drawablePadding="10dip"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:editable="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textField_password"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_password_grey"
                android:drawablePadding="10dip"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:singleLine="false"
                android:editable="true"
                android:password="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email_grey"
                android:drawablePadding="10dip"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:editable="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textField_city"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_map_grey"
                android:drawablePadding="10dip"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:editable="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/radius_btn2"
            android:layout_marginTop="19dp"
            android:text="@string/title_activity_register"
            android:id="@+id/register_button"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textAlignment="center"
            android:typeface="monospace" />

    </LinearLayout>


</LinearLayout>
